--- a/LinqToQuerystring.IntegrationTests.WebAPI/LinqToQuerystring.IntegrationTests.WebApi2.csproj
+++ b/LinqToQuerystring.IntegrationTests.WebAPI/LinqToQuerystring.IntegrationTests.WebApi2.csproj
@@ -56,7 +56,6 @@
       <HintPath>..\packages\Newtonsoft.Json.5.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
@@ -87,9 +86,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\LinqToQuerystring.WebApi\LinqToQuerystring.WebApi.csproj">
-      <Project>{AC211100-2F7A-46A9-B630-C2DF57F50895}</Project>
-      <Name>LinqToQuerystring.WebApi</Name>
+    <ProjectReference Include="..\LinqToQuerystring.WebApi\LinqToQuerystring.WebApi2.csproj">
+      <Project>{c2eba6ba-11ad-4af7-b935-b71b761a63fc}</Project>
+      <Name>LinqToQuerystring.WebApi2</Name>
     </ProjectReference>
     <ProjectReference Include="..\LinqToQuerystring\LinqToQuerystring.csproj">
       <Project>{7859c906-95d8-4322-aa44-bc854b065aee}</Project>
