--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,9 +14,9 @@ assembly_info:
   assembly_file_version: '{version}'
   assembly_informational_version: '{version}'
 before_build:
-    - cmd: nuget restore LinqToQuerystring.sln
+    - cmd: nuget restore LinqToQuerystring.WebApi2.sln
 build:
-  project: LinqToQuerystring.sln
+  project: LinqToQuerystring.WebApi2.sln
   verbosity: minimal
 notifications:
 - provider: Slack
