--- a/LinqToQuerystring.WebApi/LinqToQuerystring.WebAPI2.nuspec
+++ b/LinqToQuerystring.WebApi/LinqToQuerystring.WebAPI2.nuspec
@@ -10,12 +10,12 @@
     <description>Provides an action filter to enable LinqToQuerystring for Web API 2 actions that return IQueryable</description>
     <copyright>Pete Smith 2013</copyright>
     <dependencies>
-      <dependency id="LinqToQuerystring" version="0.7.0" />
       <dependency id="Microsoft.AspNet.WebApi.Core" version="5.0.0" />
       <dependency id="Microsoft.Net.Http" version="2.2.18" />
     </dependencies>
   </metadata>
   <files>
+    <file src="bin\Release\LinqToQuerystring.dll" target="lib\net45\LinqToQuerystring.dll" />
     <file src="bin\Release\LinqToQuerystring.WebApi2.dll" target="lib\net45\LinqToQuerystring.WebApi2.dll" />
   </files>
 </package>
