--- a/test/S2fx.LinqToQuerystring.EntityFrameworkCore.Tests/S2fx.LinqToQuerystring.EntityFrameworkCore.Tests.csproj
+++ b/test/S2fx.LinqToQuerystring.EntityFrameworkCore.Tests/S2fx.LinqToQuerystring.EntityFrameworkCore.Tests.csproj
@@ -6,19 +6,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Model\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Machine.Specifications" Version="0.12.0" />
     <PackageReference Include="Machine.Specifications.Runner.VisualStudio" Version="2.6.1" />
     <PackageReference Include="Machine.Specifications.Should" Version="0.11.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="2.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\S2fx.LinqToQuerystring.Core\S2fx.LinqToQuerystring.Core.csproj" />
     <ProjectReference Include="..\..\src\S2fx.LinqToQuerystring.EntityFrameworkCore\S2fx.LinqToQuerystring.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\S2fx.LinqToQuerystring.Tests.Common\S2fx.LinqToQuerystring.Tests.Common.csproj" />
   </ItemGroup>
 
 </Project>
