--- a/test/S2fx.LinqToQuerystring.EntityFrameworkCore.Tests/S2fx.LinqToQuerystring.EntityFrameworkCore.Tests.csproj
+++ b/test/S2fx.LinqToQuerystring.EntityFrameworkCore.Tests/S2fx.LinqToQuerystring.EntityFrameworkCore.Tests.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="Machine.Specifications" Version="0.12.0" />
     <PackageReference Include="Machine.Specifications.Runner.VisualStudio" Version="2.6.1" />
     <PackageReference Include="Machine.Specifications.Should" Version="0.11.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="2.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.1" />
   </ItemGroup>
