--- a/test/S2fx.LinqToQuerystring.Tests.Common/S2fx.LinqToQuerystring.Tests.Common.csproj
+++ b/test/S2fx.LinqToQuerystring.Tests.Common/S2fx.LinqToQuerystring.Tests.Common.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>S2fx.LinqToQuerystring.Tests</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.1" />
+  </ItemGroup>
+
 </Project>
