--- a/Shared.props
+++ b/Shared.props
@@ -8,7 +8,7 @@
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <PackageTags>odata;linqtoquerystring;linq</PackageTags>
     <VersionPrefix>0.7.1</VersionPrefix>
-    <VersionSuffix>beta</VersionSuffix>
+    <VersionSuffix></VersionSuffix>
     <VersionSuffix Condition="'$(VersionSuffix)'!='' AND '$(BuildNumber)' != ''">$(VersionSuffix)-$(BuildNumber)</VersionSuffix>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <DebugType>portable</DebugType>
