--- a/src/S2fx.LinqToQuerystring.Core/S2fx.LinqToQuerystring.Core.csproj
+++ b/src/S2fx.LinqToQuerystring.Core/S2fx.LinqToQuerystring.Core.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Antlr3" Version="3.5.2-beta1" />
+    <PackageReference Include="Antlr3.Runtime" Version="3.5.1" />
   </ItemGroup>
 
   <PropertyGroup>
